--- a/Curriculum_Vitae_en.tex
+++ b/Curriculum_Vitae_en.tex
@@ -132,7 +132,7 @@ Good challenges, which demand concentration and focus on quality deliveries.
 
 \begin{twenty}
   \twentyitem
-    {2018-Atual}
+    {2018-Current}
     {Senior Backend and Frontend Developer}
     {kitconcept GmbH}
     {Analysis and development of web portals. (Python / Zope / Plone / ReactJS)}
