--- a/Curriculum_Vitae.tex
+++ b/Curriculum_Vitae.tex
@@ -69,7 +69,7 @@ Bons desafios, que exijam concentração e zelo por entregas de qualidade.
 \begin{twenty}
   \twentyitem
     {2011-2012}
-    {Especialização em Desenvolviemnto Web.}
+    {Especialização em Desenvolvimento Web.}
     {UTFPR}
     {Utilização de páginas Web off-line na realização de inventários de patrimônio.}
   \twentyitem
